# bevy_hanabi_loader

./: Cargo.toml  Readme.md
assets/: cloud.bvfx
src/: hanabi_effect_builder.rs  lib.rs  main.rs  particle_types.rs  util.rs
src/examples/: basic.rs
src/particle_types/: billboard.rs  mod.rs  portal.rs
