[package]
name = "bevy_hanabi_loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
bevy-inspector-egui = "0.22.1"
bevy_egui = "0.24.0"
bevy_hanabi = "0.9.0"
ron = "0.8.1"
serde = { version = "1.0", features = ["derive"] }