[package]
name = "bevy_hanabi_loader"
description = "A wrapper around bevy_hanabi that lets you define your vfx files in RON format and load them into bevy"
license = "MIT"
version = "0.17.0"
edition = "2024"


[lib]
name = "bevy_hanabi_loader"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version="0.17.0",features=[ "bevy_render", "bevy_asset"] }
bevy-inspector-egui = "0.35.0"
bevy_egui = "0.38.0"
bevy_hanabi = "0.17"
image = "0.25.2"
ron = "0.8.1"
serde = { version = "1.0", features = ["derive"] }



[[example]]
name = "basic"
path = "src/examples/basic.rs"
